	  support/regression/tests/gcc-torture-execute-va-arg-15.c,
	  support/regression/tests/gcc-torture-execute-va-arg-16.c,
	  support/regression/tests/gcc-torture-execute-va-arg-18.c,
	  support/regression/tests/gcc-torture-execute-va-arg-26.c,
	  support/regression/tests/gcc-torture-execute-va-arg-5.c,
	  support/regression/tests/gcc-torture-execute-va-arg-6.c,
	  support/regression/tests/gcc-torture-execute-va-arg-9.c:
	  Disable some tests for pdk14 (on which they won't work anytime soon due to lack of memory).
	* src/pdk/gen.c:
	  Fix non-dead-register bugs, fix a carry issue.

2019-03-14 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pdk14/Makefile.in,
	  device/lib/pdk14/__gptrget.s,
	  device/lib/pdk15/Makefile.in,
	  device/lib/pdk15/__gptrget.s,
	  src/pdk/gen.c,
	  src/pdk/ralloc2.cc:
	  Improve read of 16-bit value via pointer.
	* support/regression/tests/gcc-torture-execute-pure-1.c,
	  support/regression/tests/gcc-torture-execute-string-opt-18.c,
	  support/regression/tests/io.c,
	  support/regression/tests/key.c,
	  support/regression/tests/string.c,
	  support/regression/tests/switch.c:
	  Disable some tests for pdk14 (on which they won't work anytime soon due to lack of memory).
	* src/SDCCglue.c:
	  Fix UTF-16 and UTF-16 string literals for pdk.

2019-03-14 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx,
	  src/SDCCast.c,
	  support/regression/tests/vaargs.c:
	  Disable omission of integer promotion of varargs for pdk.
	* device/include/stdarg.h:
	  Fix variable arguments for pdk.
	  src/pdk/gen.c:
	  Fix stack adjustment for reentrant function returning 16-bit value.
	* support/regression/tests/bug2084206.c,
	  support/regression/tests/gcc-torture-execute-920721-1.c,
	  support/regression/tests/gcc-torture-execute-920829-1.c,
	  support/regression/tests/gcc-torture-execute-921013-1.c,
	  support/regression/tests/gcc-torture-execute-921124-1.c,
	  support/regression/tests/gcc-torture-execute-980604-1.c: