@@ -1,0 +1,7 @@
+MAIN		= tim_ser
+
+OTHERS		= timer t0 serial print
+
+include sdcc.mk
+
+MODEL		= small
